--- a/index.html
+++ b/index.html
@@ -1,29 +1,202 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br" style="width: 100%;height: 100%;">
+
 <head>
-<link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>InfoTech</title>
+    <meta name="twitter:description" content="Grupo de estudantes de engenharia da FACAMP, em busca de conhecimento e diversão. Bichos de 2020">
+    <meta property="og:image" content="https://infotechfacamp.github.io/assets/img/INFO TECH.png">
+    <meta name="description" content="Grupo de estudantes de engenharia da FACAMP, em busca de conhecimento e diversão. Bichos de 2020">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary">
+    <link rel="icon" type="image/png" sizes="500x500" href="assets/img/INFO%20TECH.png">
+    <link rel="icon" type="image/png" sizes="500x500" href="assets/img/INFO%20TECH.png">
+    <link rel="icon" type="image/png" sizes="500x500" href="assets/img/INFO%20TECH.png">
+    <link rel="icon" type="image/png" sizes="500x500" href="assets/img/INFO%20TECH.png">
+    <link rel="icon" type="image/png" sizes="500x500" href="assets/img/INFO%20TECH.png">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
+    <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cookie">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu&amp;display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/styles.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
-<body>
 
-   <div class="context">
-        <h1>Under Construction</h1>
+<body style="width: 100%;height: 100%;">
+    <div>
+        <header>
+            <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white transparency border-bottom border-light" id="transmenu" style="width: 100%;">
+                <div class="container"><a class="navbar-brand text-success" href="#header"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none" class="fa-2x">
+                            <path d="M9.75 17L9 20L8 21H16L15 20L14.25 17M3 13H21M5 17H19C20.1046 17 21 16.1046 21 15V5C21 3.89543 20.1046 3 19 3H5C3.89543 3 3 3.89543 3 5V15C3 16.1046 3.89543 17 5 17Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                        </svg>&nbsp;</a><button data-bs-toggle="collapse" class="navbar-toggler collapsed" data-bs-target="#navcol-1"><span></span><span></span><span></span></button>
+                    <div class="collapse navbar-collapse" id="navcol-1">
+                        <ul class="navbar-nav ms-auto">
+                            <li class="nav-item"><a class="nav-link" href="#">Sobre nós</a></li>
+                            <li class="nav-item"></li>
+                            <li class="nav-item"><a class="nav-link" href="https://github.com/InfoTechFacamp">Nosso repo&nbsp;<i class="fa fa-github"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            <div class="bg-success d-flex align-items-center" style="height: 100vh;background: linear-gradient(180deg, var(--bs-blue), var(--bs-teal)), transparent;">
+                <h1 style="font-size: 125px;width: 100%;">INFO TECH</h1>
+            </div>
+        </header>
+        <section class="py-5" style="background: linear-gradient(180deg, var(--bs-teal), var(--bs-blue));">
+            <div class="container">
+                <section style="font-family: Ubuntu, sans-serif;color: rgb(255,255,255);">
+                    <div class="d-flex flex-column">
+                        <h2 style="text-align: center;">SOBRE NÓS</h2>
+                        <div class="d-flex justify-content-center">
+                            <p>Nós da InfoTech somo um grupo de estudantes de engenharia da computação na FACAMP.<br>Formandos em 2024</p>
+                        </div>
+                    </div>
+                </section>
+                <section class="d-flex justify-content-center align-items-center" style="text-align: center;">
+                    <div class="card border rounded shadow-lg" data-bss-hover-animate="pulse">
+                        <div class="card-body d-flex flex-column justify-content-center align-items-center" style="padding: 0px;margin: 10px;height: 350px;width: 205px;"><img class="d-lg-flex m-auto align-items-lg-center" src="https://i.imgur.com/7L6bSfi.png" style="width: 150px;border-radius: 50%;">
+                            <h4 class="card-title" style="margin-top: 5px;">Registro de vacinação</h4>
+                            <h6 class="text-muted card-subtitle mb-2" style="margin-top: 0px;">COVID VACINAÇÃO</h6>
+                            <p class="card-text" style="margin-bottom: 20px;margin-top: 15px;width: 187px;">Mapeamento e controle das doses da vacina da COVID-19</p>
+                            <div class="btn-group" role="group"><a class="btn btn-primary" role="button" style="background-color: rgb(72,72,72);" href="https://github.com/InfoTechFacamp/RegistroDeVacinacao">REPO</a><a class="btn btn-primary" role="button" style="margin-left: 7px;" href="RDV.html">INFO</a></div>
+                        </div>
+                    </div>
+                </section>
+                <section class="card-section-imagia" style="background: transparent;">
+                    <h2 style="color: rgb(255,255,255);">NOsso time</h2>
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-sm-6 col-md-4" style="width: 50%;">
+                                <div class="card-container-imagia">
+                                    <div class="card-imagia">
+                                        <div class="front-imagia" style="border-radius: 14px;">
+                                            <div class="cover-imagia"><img alt="" src="https://media4.giphy.com/media/cxD9CFGSGKxhrxmD5X/giphy.gif?cid=790b761133e3c87cc63e69c660bd74c3980c723bf0e1a775&amp;rid=giphy.gif&amp;ct=g" style="border-top-left-radius: 14px;border-top-right-radius: 14px;"></div>
+                                            <div class="d-xxl-flex justify-content-xxl-center align-items-xxl-center user-imagia" style="width: 120px;height: 120px;"><img class="img-circle" alt="" src="https://avatars.githubusercontent.com/u/37478781?v=4" style="width: 150px;height: 150px;"></div>
+                                            <div class="content-imagia">
+                                                <h3 class="name-imagia">Heitor Stein</h3>
+                                                <p class="subtitle-imagia">Estudante de engenharia da computação</p>
+                                                <p class="text-center">Um desenvolvedor apaixonado</p>
+                                            </div>
+                                            <div class="footer-imagia"><span><i class="fa fa-plus"></i> Mais informções</span></div>
+                                        </div>
+                                        <div class="back-imagia" style="border-radius: 14px;">
+                                            <div class="content-imagia content-back-imagia">
+                                                <div class="d-flex flex-column">
+                                                    <h3 class="text-center">Heitor Stein</h3>
+                                                    <p class="text-center">Eu me chamo Heitor Henrique Stein e eu de Campinas, São Paulo, Brasil.<br>Atualmente aprendendo a desenvolver para a web e desenvolvendo um bot para o Discord.&nbsp;</p>
+                                                </div>
+                                            </div>
+                                            <div class="footer-imagia">
+                                                <div class="social-imagia text-center"><a href="https://github.com/hhs0001"><i class="fa fa-github"></i></a><a href="https://www.linkedin.com/in/heitor-stein/"><i class="fa fa-linkedin"></i></a><a href="https://twitter.com/heitorhstein"><i class="fa fa-twitter"></i></a></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 col-md-4">
+                                <div class="card-container-imagia">
+                                    <div class="card-imagia">
+                                        <div class="front-imagia" style="border-radius: 14px;">
+                                            <div class="cover-imagia"><img alt="" style="border-top-left-radius: 14px;border-top-right-radius: 14px;" src="https://i.imgur.com/8YFznuQ.jpg"></div>
+                                            <div class="d-flex justify-content-center align-items-center user-imagia" style="width: 120px;height: 120px;"><img class="img-circle" alt="" src="https://avatars.githubusercontent.com/u/89416502?v=4" style="width: 150px;"></div>
+                                            <div class="content-imagia">
+                                                <h3 class="name-imagia">Anna Júlia Zoppei Nogueira</h3>
+                                                <p class="subtitle-imagia">Estudante de engenharia da computação<br></p>
+                                                <p class="text-center">Programadora em desenvolvimento</p>
+                                            </div>
+                                            <div class="footer-imagia"><span><i class="fa fa-plus"></i> Mais informações</span></div>
+                                        </div>
+                                        <div class="back-imagia" style="border-radius: 14px;">
+                                            <div class="content-imagia content-back-imagia">
+                                                <div>
+                                                    <h3 class="text-center">Anna Júlia Zoppei Nogueira</h3>
+                                                    <p class="text-center">Tenho 18 anos, estou no segundo ano de engenharia de computação na Facamp </p>
+                                                </div>
+                                            </div>
+                                            <div class="footer-imagia">
+                                                <div class="social-imagia text-center"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 col-md-4">
+                                <div class="card-container-imagia">
+                                    <div class="card-imagia">
+                                        <div class="front-imagia" style="border-radius: 14px;">
+                                            <div class="cover-imagia"><img alt="" src="https://i.imgur.com/iHE3epV.jpg" style="border-top-left-radius: 14px;border-top-right-radius: 14px;"></div>
+                                            <div class="d-xxl-flex justify-content-xxl-center align-items-xxl-center user-imagia" style="width: 120px;height: 120px;"><img class="img-circle" alt="" src="https://avatars.githubusercontent.com/u/83610784?v=4" style="width: 150px;"></div>
+                                            <div class="content-imagia">
+                                                <h3 class="name-imagia">Ariadne Cristina Pereira</h3>
+                                                <p class="subtitle-imagia">Estudante de engenharia da computação </p>
+                                                <p class="text-center">Programadora em desenvolvimento</p>
+                                            </div>
+                                            <div class="footer-imagia"><span><i class="fa fa-plus"></i>&nbsp;Mais informações<br></span></div>
+                                        </div>
+                                        <div class="back-imagia" style="border-radius: 14px;">
+                                            <div class="content-imagia content-back-imagia">
+                                                <div>
+                                                    <h3 class="text-center">Ariadne Cristina Pereira</h3>
+                                                    <p class="text-center">Meu nome é Ariadne Pereira, sou natural de Campinas, São Paulo.&nbsp;Aspirante a empreendedor e estudante de engenharia da computação na FACAMP, jovem nas horas vagas. </p>
+                                                </div>
+                                            </div>
+                                            <div class="footer-imagia">
+                                                <div class="social-imagia text-center"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 col-md-4" style="width: 50%;">
+                                <div class="card-container-imagia">
+                                    <div class="card-imagia">
+                                        <div class="front-imagia" style="border-radius: 14px;">
+                                            <div class="cover-imagia" style="border-top-left-radius: 14px;border-top-right-radius: 14px;"><img alt="" src="https://i.imgur.com/YqDvg1c.jpg"></div>
+                                            <div class="d-xxl-flex justify-content-xxl-center align-items-xxl-center user-imagia" style="width: 120px;height: 120px;"><img class="img-circle" alt="" src="https://avatars.githubusercontent.com/u/89416648?v=4" style="width: 150px;height: 150px;"></div>
+                                            <div class="content-imagia">
+                                                <h3 class="name-imagia">Luiz Felipe Caetano Mariano</h3>
+                                                <p class="subtitle-imagia">Estudante de engenharia da computação </p>
+                                                <p class="text-center">Programador em desenvolvimento</p>
+                                            </div>
+                                            <div class="footer-imagia"><span><i class="fa fa-plus"></i> Mais informações</span></div>
+                                        </div>
+                                        <div class="back-imagia" style="border-radius: 14px;">
+                                            <div class="content-imagia content-back-imagia">
+                                                <div>
+                                                    <h3 class="text-center">Luiz Felipe Caetano Mariano</h3>
+                                                    <p class="text-center">Meu nome é Luiz Felipe, sou natural de Campinas e estou cursando engenharia de computação na FACAMP </p>
+                                                </div>
+                                            </div>
+                                            <div class="footer-imagia">
+                                                <div class="social-imagia text-center"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section></section>
+            </div>
+        </section>
     </div>
-
-
-<div class="area" >
-            <ul class="circles">
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-            </ul>
-    </div >
-
+    <div class="footer-2">
+        <div class="container">
+            <div class="row">
+                <div class="col-8 col-sm-6 col-md-6">
+                    <p class="text-start" style="margin-top:5%;margin-bottom:3%;">© 2021 InfoTech</p>
+                </div>
+                <div class="col-12 col-sm-6 col-md-6">
+                    <p class="text-end" style="margin-top:5%;margin-bottom:8%%;font-size:1em;"><a href="PDP.html" style="text-decoration: none;color: rgb(255,255,255);">Política de Privacidade<br><br></a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/script.min.js"></script>
 </body>
+
 </html>
