--- a/404.html
+++ b/404.html
@@ -21,9 +21,13 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cookie">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu&amp;display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/css/styles.min.css">
-    <link rel="stylesheet" href="assets/css/404.min.css">
+    <link rel="stylesheet" href="assets/css/-Fixed-Navbar-start-with-transparency-background-BS4-.css">
+    <link rel="stylesheet" href="assets/css/3D-animated-text-on-hover-1.css">
+    <link rel="stylesheet" href="assets/css/404.compiled.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="assets/css/project-card.css">
+    <link rel="stylesheet" href="assets/css/simple-footer.css">
+    <link rel="stylesheet" href="assets/css/Team-with-rotating-cards.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
@@ -64,8 +68,10 @@
   
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/script.min.js"></script>
-    <script src="assets/js/404.min.js"></script>
+    <script src="assets/js/bs-init.js"></script>
+    <script src="assets/js/-Fixed-Navbar-start-with-transparency-background-BS4-.js"></script>
+    <script src="assets/js/3D-animated-text-on-hover.js"></script>
+    <script src="assets/js/404.js"></script>
 </body>
 
 </html>
