--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="icon" type="image/png" sizes="500x500" href="assets/img/INFO%20TECH.png">
     <link rel="icon" type="image/png" sizes="500x500" href="assets/img/INFO%20TECH.png">
     <link rel="icon" type="image/png" sizes="500x500" href="assets/img/INFO%20TECH.png">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cookie">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu&amp;display=swap">
@@ -64,7 +64,7 @@
                             <h4 class="card-title" style="margin-top: 5px;">Registro de vacinação</h4>
                             <h6 class="text-muted card-subtitle mb-2" style="margin-top: 0px;">COVID VACINAÇÃO</h6>
                             <p class="card-text" style="margin-bottom: 20px;margin-top: 15px;width: 187px;">Mapeamento e controle das doses da vacina da COVID-19</p>
-                            <div class="btn-group" role="group"><a class="btn btn-primary" role="button" style="background-color: rgb(72,72,72);" href="https://github.com/InfoTechFacamp/RegistroDeVacinacao">REPO</a><a class="btn btn-primary" role="button" style="margin-left: 7px;" href="RDV.html">INFO</a></div>
+                            <div class="btn-group" role="group"><a class="btn btn-primary" role="button" style="background-color: rgb(72,72,72);" href="https://github.com/InfoTechFacamp/RegistroDeVacinacao">REPO</a></div>
                         </div>
                     </div>
                 </section>
@@ -200,7 +200,7 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/-Fixed-Navbar-start-with-transparency-background-BS4-.js"></script>
     <script src="assets/js/3D-animated-text-on-hover.js"></script>
